# resultful

./: pyproject.toml  setup.cfg  setup.py
src/resultful/: __init__.py  result.py
src/resultful/impl/: no_result.py  result.py
tests/: conftest.py  test_failure.py  test_no_result.py  test_success.py
