[metadata]
name = resultful
author = Krzysztof Przybyła
url = https://github.com/kprzybyla/resultful
description = Expect results, not exceptions!
long_description = file: README.rst
license = MIT
platform = linux
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src

[options.package_data]
resultful = py.typed

[options.packages.find]
where = src

[flake8]
max-line-length = 99

[mypy]
strict = true
pretty = true
python_version = 3.8
mypy_path = src/stubs

[tool:pytest]
python_classes =

[coverage:run]
branch = true
omit = */__version__.py

[coverage:report]
fail_under = 90
exclude_lines =
    pragma: no cover
    @overload

[coverage:html]
directory = coverage
